Fix https://github.com/GoogleCloudPlatform/appengine-java-standard/issues/13
PiperOrigin-RevId: 466000250
Change-Id: I3fdd59c3cf0400ae7a7758b13d7621f080c8e0f4